Fix some overflows issues caused by the sticky navigation bar
* Use a border, instead of margin, for tocset

This ensures that the scroll bar starts in the appropriate place, and the
background of the border is appropriate when the navtopset is missing

* Adjust left margin note styling to work with sticky navbar

- Use the same styling as the old narrow width display area
- Specify display: contents so text 'behind' flows around the note

--- a/scribble-lib/scribble/manual-style.css
+++ b/scribble-lib/scribble/manual-style.css
@@ -394,15 +394,8 @@ a:hover {
     right: 2em;
     height: 0em;
     width: 13em;
-    margin: 0em 0em 0em -13em;
-}
-
-@media all and (max-width:1340px) {
-    /* avoid disappearing left note if display area is narrow */
-    .refparaleft, .refelemleft {
-        margin: 0em 0em 0em 0em;
-        right: 0em;
-     }
+    margin: 0em 0em 0em 0em;
+    display: contents;
 }
 
 .refcolumnleft {
@@ -429,8 +422,7 @@ a:hover {
     width: 14rem;
     padding: 0rem 0.5rem 0.5rem 0.5rem;
     background-color: hsl(216, 15%, 70%);
-    margin: 6rem 0 0 0;
-
+    border-top: 6rem solid hsl(216, 15%, 70%);
 }
 
 .tocset td {
@@ -450,6 +442,7 @@ a:hover {
 .tocview {
     text-align: left;
     background-color: inherit;
+    margin-top: 1em;
 }
 
 
